--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,10 @@ env:
   - TEST_REDIS=1
   - PATH=/snap/bin:$PATH
   - HUGO_BASE_URL=https://thethingsstack.io/
-  - DOCKER_IMAGE=thethingsnetwork/lorawan-stack
-  - DOCKER_IMAGE_DEV=thethingsnetwork/lorawan-stack-dev
+  - DOCKER_IMAGE=rvolosatovs/lorawan-stack
+  - DOCKER_IMAGE_DEV=rvolosatovs/lorawan-stack-dev
 matrix:
   include:
-  - env: RUNTYPE=js
-  - env: RUNTYPE=go.test RUN_GOARCH=amd64
-  - env: RUNTYPE=go.test RUN_GOARCH=386
-  - env: RUNTYPE=go.lint
   - env: RUNTYPE=release
     if: tag IS present OR (type != pull_request AND branch = master)
 services:
@@ -45,78 +41,18 @@ before_install:
     rm -rf $HOME/.cache/yarn/*
   fi
 - |
-  if [[ ! -z "$encrypted_fc3d5d829302_key" ]]; then
-    openssl aes-256-cbc -K $encrypted_fc3d5d829302_key \
-                        -iv $encrypted_fc3d5d829302_iv \
-                        -in pkg/blob/testdata/gcloud.json.enc \
-                        -out pkg/blob/testdata/gcloud.json \
-                        -d
-  fi
-- |
-  if [[ "$RUNTYPE" == "go.test" ]]; then
-    set -e
-    sudo rm /usr/local/bin/docker-compose
-    curl -L https://github.com/docker/compose/releases/download/1.23.2/docker-compose-$(uname -s)-$(uname -m) > docker-compose
-    chmod +x docker-compose
-    sudo mv docker-compose /usr/local/bin
-  fi
-- |
   if [[ "$RUNTYPE" == "release" ]]; then
-    openssl aes-256-cbc -K $encrypted_82ec1379e985_key -iv $encrypted_82ec1379e985_iv -in snapcraft.login.enc -out snapcraft.login -d
-    nvm install 10.16.0
-  fi
-- |
-  if [[ "$RUNTYPE" == "js" ]]; then
     nvm install 10.16.0
   fi
 install:
 - make init
 - |
-  if [[ "$RUNTYPE" == "js" ]]; then
-    $MAGE js:devDeps js:deps jsSDK:deps
-    $MAGE docs:deps
-  fi
-- |
   if [[ "$RUNTYPE" == "release" ]]; then
     set -e
-    sudo apt-get -y update
-    sudo apt-get install -y rpm snapd
-    sudo snap install snapcraft --classic
     $MAGE jsSDK:deps js:deps
     $MAGE docs:deps
   fi
-before_script:
-- |
-  if [[ "$RUNTYPE" == "go.test" ]]; then
-    set -e
-    make dev.databases.start
-  fi
 script:
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE proto:swaggerClean proto:swagger; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE proto:markdownClean proto:markdown; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE proto:jsSDKClean proto:jsSDK; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE jsSDK:clean jsSDK:build; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE js:translations; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE js:test jsSDK:test; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE js:lint jsSDK:lint; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE version:files; fi
-- if [[ "$RUNTYPE" == "js" ]]; then $MAGE docs:build; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE headers:check; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE proto:goClean proto:go; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE go:messages; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE go:lint; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE go:unconvert; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE go:fmt; fi
-- if [[ "$RUNTYPE" == "go.lint" ]]; then $MAGE dev:misspell; fi
-- |
-  if [[ "$RUNTYPE" == "go.test" ]]; then
-    if [[ "$RUN_GOARCH" == "amd64" ]]; then
-      GOARCH=$RUN_GOARCH $MAGE go:coveralls
-    else
-      GOARCH=$RUN_GOARCH $MAGE go:test
-    fi
-  fi
-- if [[ "$RUNTYPE" == "go.test" ]]; then $MAGE go:testBinaries; fi
 - if [[ "$RUNTYPE" == "release" ]]; then $MAGE version:files; fi
 - |
   if [[ "$RUNTYPE" == "release" ]]; then
@@ -135,7 +71,7 @@ after_success:
     $MAGE js:build
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
     if [[ ! -z "$TRAVIS_TAG" ]]; then
-      GO111MODULE=on go run github.com/goreleaser/goreleaser --release-notes <(go run github.com/TheThingsIndustries/release-notes -owner TheThingsNetwork -repo lorawan-stack -id "release-notes" -head $(git rev-parse HEAD) | sort)
+      GO111MODULE=on go run github.com/goreleaser/goreleaser
     else
       GO111MODULE=on go run github.com/goreleaser/goreleaser --snapshot
       if [[ ! -z "$DOCKER_IMAGE_DEV" ]]; then
